# quanser_dc_motor

./: README.md
TP3_AU426/digital_twin/: mpc_solver.c  mpc_solver.h  mpc_solver_wrapper.c  mpc_solver_wrapper.mexw64  qube3_dc_lqr.rt-win64  qube3_dc_lqr.slx  qube3_dc_lqr.slxc  qube3_dc_lqr_script.m  qube3_dc_mpc.exp  qube3_dc_mpc.lib  qube3_dc_mpc.rt-win64  qube3_dc_mpc.slx  qube3_dc_mpc.slxc  qube3_dc_mpc_codegen.m  qube3_dc_mpc_script.m  qube3_dc_ss_model.rt-win64  qube3_dc_ss_model.slx  qube3_dc_ss_model.slxc  qube3_idd.m  qube3_state_space_model.m  qube3_state_space_model_sol.m
TP3_AU426/digital_twin/generic_nlp_ocp_solver_simulink_block_quarc_win64/: buildInfo.mat  codedescriptor.dmr  generic_nlp_ocp_solver_simulink_block.bat  generic_nlp_ocp_solver_simulink_block.c  generic_nlp_ocp_solver_simulink_block.h  generic_nlp_ocp_solver_simulink_block.mk  generic_nlp_ocp_solver_simulink_block.rsp  generic_nlp_ocp_solver_simulink_block_comp.rsp  generic_nlp_ocp_solver_simulink_block_data.c  generic_nlp_ocp_solver_simulink_block_dt.h  generic_nlp_ocp_solver_simulink_block_main.c  generic_nlp_ocp_solver_simulink_block_private.h  generic_nlp_ocp_solver_simulink_block_targ_data_map.m  generic_nlp_ocp_solver_simulink_block_types.h  multiword_types.h  rt_defines.h  rt_nonfinite.c  rt_nonfinite.h  rtmodel.h  rtw_proj.tmw  rtwtypes.h  rtwtypeschksum.mat  zero_crossing_types.h
TP3_AU426/digital_twin/qube3_dc_lqr_quarc_win64/: buildInfo.mat  codedescriptor.dmr  compileInfo.mat  multiword_types.h  qube3_dc_lqr.bat  qube3_dc_lqr.c  qube3_dc_lqr.h  qube3_dc_lqr.mk  qube3_dc_lqr.rsp  qube3_dc_lqr_comp.rsp  qube3_dc_lqr_data.c  qube3_dc_lqr_dt.h  (+16 more)
TP3_AU426/hardware/: qube2_dc_lqr_script.m  qube2_dc_mpc_codegen.m  qube2_dc_mpc_script.m  qube2_param.m  qube2_state_space_model.m  qube2_state_space_model_sol.m
acados_dc_motor/: acados_ocp_nlp.json  initial_run.m  rosenbrock_m1.m  rosenbrock_m2.asv  rosenbrock_m2.m  rosenbrock_m2.py  rosenbrock_m2bis.m  rosenbrock_m2bis.py  rosenbrock_m2bisbis.m  rosenbrock_m2bisbis_simulink.m
acados_dc_motor/c_generated_code/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  CMakeLists.txt  INSTALL.vcxproj  INSTALL.vcxproj.filters  Makefile  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  acados_mex_create_generic_nlp.c  acados_mex_create_generic_nlp.mexw64  acados_mex_free_generic_nlp.c  acados_mex_free_generic_nlp.mexw64  acados_mex_set_generic_nlp.c  acados_mex_set_generic_nlp.mexw64  acados_mex_solve_generic_nlp.c  acados_mex_solve_generic_nlp.mexw64  acados_ocp_solver_generic_nlp.vcxproj  acados_ocp_solver_generic_nlp.vcxproj.filters  acados_sim_solver_generic_nlp.c  acados_sim_solver_generic_nlp.h  acados_sim_solver_sfunction_generic_nlp.c  acados_solver_generic_nlp.c  acados_solver_generic_nlp.h  acados_solver_sfunction_generic_nlp.c  acados_solver_sfunction_generic_nlp.mexw64  cmake_install.cmake  generic_nlp.sln  generic_nlp_mex_solver.m  generic_nlp_ocp_solver_simulink_block.exp  generic_nlp_ocp_solver_simulink_block.lib  generic_nlp_ocp_solver_simulink_block.rt-win64  generic_nlp_ocp_solver_simulink_block.slx  generic_nlp_ocp_solver_simulink_block.slxc  main_generic_nlp.c  main_sim_generic_nlp.c  make_mex_generic_nlp.m  make_sfun.m  make_sfun_sim.m  ocp_generic_nlp.vcxproj  (+1 more)
acados_dc_motor/c_generated_code/acados_ocp_solver_generic_nlp.dir/Release/: acados_ocp_solver_generic_nlp.dll.recipe
acados_dc_motor/c_generated_code/acados_ocp_solver_generic_nlp.dir/Release/acados_o.B27A024A.tlog/: CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
acados_dc_motor/c_generated_code/c_generated_code/: acados_ocp_solver_generic_nlp.exp  acados_ocp_solver_generic_nlp.lib
acados_dc_motor/c_generated_code/generic_nlp_constraints/: generic_nlp_constr_h_e_fun.c  generic_nlp_constr_h_e_fun_jac_uxt_zt.c  generic_nlp_constraints.h
acados_dc_motor/c_generated_code/generic_nlp_cost/: generic_nlp_cost.h  generic_nlp_cost_ext_cost_e_fun.c  generic_nlp_cost_ext_cost_e_fun_jac.c  generic_nlp_cost_ext_cost_e_fun_jac_hess.c
acados_dc_motor/c_generated_code/generic_nlp_model/: generic_nlp_model.h
acados_dc_motor/c_generated_code/generic_nlp_ocp_solver_simulink_block_quarc_win64/: buildInfo.mat  codedescriptor.dmr  compileInfo.mat  generic_nlp_ocp_solver_simulink_block.c  generic_nlp_ocp_solver_simulink_block.h  generic_nlp_ocp_solver_simulink_block.mk  generic_nlp_ocp_solver_simulink_block.rsp  generic_nlp_ocp_solver_simulink_block_comp.rsp  generic_nlp_ocp_solver_simulink_block_data.c  generic_nlp_ocp_solver_simulink_block_dt.h  generic_nlp_ocp_solver_simulink_block_main.c  generic_nlp_ocp_solver_simulink_block_private.h  generic_nlp_ocp_solver_simulink_block_targ_data_map.m  generic_nlp_ocp_solver_simulink_block_types.h  multiword_types.h  rt_defines.h  rt_nonfinite.c  rt_nonfinite.h  rtmodel.h  rtwtypes.h  rtwtypeschksum.mat  zero_crossing_types.h
acados_dc_motor/c_generated_code/generic_nlp_ocp_solver_simulink_block_quarc_win64/tmwinternal/: simulink_cache.xml
acados_dc_motor/c_generated_code/ocp_generic_nlp.dir/Release/: ocp_generic_nlp.lib  ocp_generic_nlp.vcxproj.FileListAbsolute.txt
acados_dc_motor/c_generated_code/ocp_generic_nlp.dir/Release/ocp_generic_nlp.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  Lib.command.1.tlog
acados_dc_motor/c_generated_code/slprj/quarc_win64/_sharedutils/: shared_file.dmr
acados_dc_motor/c_generated_code/slprj/quarc_win64/generic_nlp_ocp_solver_simulink_block/tmwinternal/: BlockTraceInfo.mat  CompileInfo.xml  binfo.mat  minfo.mat
acados_dc_motor/c_generated_code/x64/Release/ALL_BUILD/: ALL_BUILD.recipe
acados_dc_motor/c_generated_code/x64/Release/ALL_BUILD/ALL_BUILD.tlog/: CustomBuild.command.1.tlog
acados_dc_motor/c_generated_code/x64/Release/ZERO_CHECK/: ZERO_CHECK.recipe
acados_dc_motor/c_generated_code/x64/Release/ZERO_CHECK/ZERO_CHECK.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  ZERO_CHECK.lastbuildstate
(+81 files in other folders)
